--- a/index.html
+++ b/index.html
@@ -1,13 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohin Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To </h1>
+            <h1><span class="orange-color">Mohin</span> World!</h1>
+            <h3>World-class Professional Dev</h3>
+            <p>A Web Developer is responsible for the coding, design and layout of a website according to a company's
+                specifications. As the role takes into consideration user experience and function, a certain level of
+                both
+                graphic design and computer programming is necessary.</p>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/md-mohin-uddin-78b4641b7/">HIRE
+                ME</a>
+        </div>
+        <div class="half-width"><img src="images/image 10(1).png" alt=""></div>
+    </section>
 </body>
+
 </html>
