--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="experience-area">
         <h1>Experiences</h1>
         <div class="flexible-container">
-            <div class="half-width box">
+            <div id="web-experience" class="half-width box">
                 <h2>Full Stack Developer</h2>
                 <h3 class="orange-color">2021-Present | Pro Level Developer</h3>
                 <p>I am the master of HTML, CSS and Javascript. I know everything needed to make a website function,
@@ -50,7 +50,7 @@
                     Vue
                     JS. I even know the deployment, server and security. I will give you 100% web solution.</p>
             </div>
-            <div class="half-width box">
+            <div id="baby-experience" class="half-width box">
                 <h2>Baby Web Developer</h2>
                 <h3 class="orange-color">2020-2021 | Programming Hero Learner</h3>
                 <p>They didn't offer me a job. But I made myself as a remove web developer. I made their website and
@@ -59,6 +59,9 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Mohin 2021, all right reserved</p>
+    </footer>
 </body>
 
 </html>
